# tela

./: Cargo.toml  README.md  _mock_cargo.ts  clean_diff.js  clean_diff.txt  compute_fingerprint.js  custom_pack.xml  d1.json  diff.js  diff_output.txt  dummy.md  generate_diff.js  genesis.tela  lockfile.sig  metadata.json  original_check.ts  original_gatekeeper.yml  original_lexer.ts  original_manifesto.md  original_parser.ts  original_readme.md  original_studio_dev.md  package-lock.json  package.json  repomix-output.xml  security_hotfix.patch  setup_originals.js  sprint_002_tree_sitter.tela  sprint_complete.tela  sprint_fix_serialization.tela  sprint_js_parity.tela  sprint_parser.tela  sprint_scanner.tela  tela_context.xml  test_agg.ts  test_ast.ts  test_ast2.ts  test_log.ts  test_parser.ts  tsconfig.json
.github/workflows/: delta.yml  gatekeeper.yml
docs/: AI Studio Builder System Instructions.md  AUTH_HANDOVER.md  Oracle System Instructions.md  SPEC.md  System_instructions_AI_Studio.md  TELA_SPRINT_BEST_PRACTICES.md  TELEMETRY.md  manifesto.md  studio_dev.md
src/: App.tsx  lib.rs  timeline.rs
tests/: code_vector_pipe.test.ts  delta_skip.test.ts  dir_expansion.test.ts  dir_lancedb.test.ts  gmn_gradient_descent.test.ts  grammar_dpda.test.ts  integration.rs  integration_lsp.rs  integration_native_pack.rs  integration_orchestrate.rs  markdown_tdb_migration.test.ts  reconstruct_bash.test.ts  reconstruct_bash_bdd.test.ts  structural_determinism.test.ts  test_apply.test.ts  test_apply.ts  test_pack.ts  track_c.test.ts  vector_delta.test.ts  workflow_repo.test.ts
(+81 files in other folders)
