[package]
name = "teleportation_steel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "telac"
path = "src/bin/telac.rs"

[[bin]]
name = "telad"
path = "src/bin/telad.rs"

[[bin]]
name = "tela-analyzer"
path = "src/bin/tela-analyzer.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
# tree-sitter = "0.22"
# tree-sitter-rust = "0.22"
# tree-sitter-typescript = "0.22"
lance = "0.10"
arrow = "51"
futures = "0.3"
hex = "0.4"
